--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 		"@prisma/client": "^6.19.0",
 		"bcrypt": "^6.0.0",
 		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^6.0.0",
 		"@types/express": "^5.0.5",
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^24.10.1",
 		"prisma": "^6.19.0",
 		"tsx": "^4.20.6",
