--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.932.0",
 		"@prisma/client": "^6.19.0",
 		"bcrypt": "^6.0.0",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^2.0.2",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^6.0.0",
 		"@types/express": "^5.0.5",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@types/multer": "^2.0.0",
 		"@types/node": "^24.10.1",
 		"dotenv": "^17.2.3",
 		"prisma": "^6.19.0",
