--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev": "tsx watch src/main.ts",
 		"build": "tsc",
 		"start": "node dist/main.js",
-		"start:local": "node -r dotenv/config dist/main.js"
+		"start:local": "node -r dotenv/config dist/main.js",
+		"start:prod": "npx prisma migrate deploy && node dist/main.js"
 	},
 	"keywords": [],
 	"author": "",
