--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"build": "tsc",
 		"start": "node dist/main.js",
 		"start:local": "node -r dotenv/config dist/main.js",
-		"start:prod": "npx prisma migrate deploy && node dist/main.js"
+		"start:app": "node dist/main.js",
+		"start:prod": "npx prisma migrate deploy && npm run start:app"
 	},
 	"keywords": [],
 	"author": "",
