--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@aws-sdk/client-s3": "^3.932.0",
 		"@prisma/client": "^6.19.0",
 		"bcrypt": "^6.0.0",
+		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^2.0.2",
@@ -26,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^6.0.0",
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.5",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/multer": "^2.0.0",
