--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,15 @@
 services:
-    db:
-        image: postgres:16-alpine
-        restart: always
-        environment:
-            POSTGRES_USER: ${POSTGRES_USER}
-            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-            POSTGRES_DB: ${POSTGRES_DB}
-        volumes:
-            - postgres_data:/var/lib/postgresql/data
-        ports:
-            - "5432:5432"
-
     api:
         build:
             context: .
-        depends_on:
-            - db
         restart: always
         environment:
-            DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
+            DATABASE_URL: "file:/app/data/prod.db"
             PORT: 3000
+        volumes:
+            - ./data:/app/data
         ports:
             - "3000:3000"
-        command: sh -c "npx prisma migrate deploy && node dist/main.js"
+        command: sh -c "mkdir -p /app/data && npx prisma migrate deploy && node dist/main.js"
         env_file:
             - .env
-
-volumes:
-    postgres_data:
