--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.932.0",
+		"@aws-sdk/s3-request-presigner": "^3.940.0",
 		"@prisma/client": "^6.19.0",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
